@@ -4,6 +4,10 @@ Changelog
 2.1.3 (unreleased)
 ------------------
 
+* Added the ability to configure a Salesforce Contact adapter using
+  the wizard.
+  [yomatters]
+
 * Updated popup form so that it closes correctly with
   plone.app.jquerytools 1.2b4.
   [yomatters]
